FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_125807367a85e469acf50d2004ee72e9/error.log
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp: In member function ‘virtual void dolfin::dolfin_expression_125807367a85e469acf50d2004ee72e9::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp:73:36: error: ‘position_x’ was not declared in this scope
           values[0] = (((pow((x[0]-position_x[0]),2)+pow((x[1]-position_y[0]),2)+pow((x[2]-position_z[0]),2)) <=pow(radius_tot, 2)))? a0*4*pi*G*source_mass/volume_out : 0;
                                    ^~~~~~~~~~
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp:73:64: error: ‘position_y’ was not declared in this scope
           values[0] = (((pow((x[0]-position_x[0]),2)+pow((x[1]-position_y[0]),2)+pow((x[2]-position_z[0]),2)) <=pow(radius_tot, 2)))? a0*4*pi*G*source_mass/volume_out : 0;
                                                                ^~~~~~~~~~
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp:73:92: error: ‘position_z’ was not declared in this scope
           values[0] = (((pow((x[0]-position_x[0]),2)+pow((x[1]-position_y[0]),2)+pow((x[2]-position_z[0]),2)) <=pow(radius_tot, 2)))? a0*4*pi*G*source_mass/volume_out : 0;
                                                                                            ^~~~~~~~~~
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp: In member function ‘virtual double dolfin::dolfin_expression_125807367a85e469acf50d2004ee72e9::get_property(std::__cxx11::string) const’:
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp:85:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;
           ^~
/tmp/tmpsj4wd3_j/dolfin_expression_125807367a85e469acf50d2004ee72e9.cpp:85:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "stand_dev") return stand_dev;          if (name == "p") return p;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;
                                                 ^~
